# rapidpro-apps

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerrun.aws.json  Dockerrun.aws.json.default  Makefile  README.md  authenticate.sh  code_check.py  docker-compose.yml  docker-entrypoint.sh  get_protobuffers.sh  gunicorn.conf.py  install  nginx.conf  package.json  pip-freeze.txt  pip-requires.txt  push_base.Dockerfile  pyproject.toml  setting_ci.py  settings.dev.py  setup.cfg  setup.py  supervisor-app.conf  varnish.default.vcl
.github/workflows/: build-production-india-rapidpro.yaml  build-rapidpro-apps-pypi.yaml  build-rapidpro-dispatch-shared.yaml  build-rapidpro-push-tag-shared.yaml  ci.yaml
analytics_api/: README.md  __init__.py  apps.py  tests.py  urls.py  views.py
channel_stats/: README.md  apps.py  middleware.py  serializers.py  urls.py  views.py
channel_stats/migrations/: 0001_initial.py
contacts_ext/: apps.py  serializers.py  urls.py  views.py
contrib/: code_check.py
docker/: Dockerfile  pip-requires.txt
protos/: billing.proto
static/coffee/flows/: controllers.coffee
temba/: settings.py.prod  settings_common.py
temba/api/: tests.py
temba/api/migrations/: 0005_apitoken_role.py
temba/api/v1/: views.py
temba/assets/: models.py  views.py
temba/channels/: models.py
temba/contacts/: models.py
temba/contacts/migrations/: 0006_reorganize_exports.py  0019_unblock_unfail_test_contacts.py  0023_remove_test_contacts_from_sys_groups.py  0025_unblock_contacts_imported_again_after_being_blocked.py  0029_norm_twitter_urns.py  0034_auto_20160323_1423.py  0036_reevaluate_dynamic_groups.py
temba/flows/migrations/: 0049_install_flowcount_triggers.py  0150_populate_run_events.py
temba/msgs/: tasks.py
temba/msgs/migrations/: 0010_reorganize_exports.py  0022_no_archived_outgoing.py  0023_released_contact_calls.py  0034_move_recording_domains.py  0035_broadcast_expressions.py  0037_backfill_recipient_counts.py  0040_auto_20151205_0206.py  0053_auto_20160415_1337.py
temba/orgs/migrations/: 0018_fix_org_groups.py
temba/utils/: ascii.py  custom_storages.py  tests.py
templates/channels/: channel_claim_android.haml
templates/flows/: flow_list.haml  simulator.haml
templates/locations/: adminboundary_alias.haml
weni/activities/: apps.py  recent_activities.py  signals.py  tasks.py
weni/analytics_api/: README.md  __init__.py  apps.py  tests.py  urls.py  views.py
weni/auth/: __init__.py  apps.py  backends.py  decorators.py  urls.py  views.py
weni/billing/: apps.py  billing_pb2.py  billing_pb2_grpc.py  queries.py  serializers.py  services.py  tests.py
weni/channel/: apps.py  serializers.py  tests.py  urls.py  views.py
weni/channel_stats/: README.md  __init__.py  apps.py  serializers.py  urls.py  views.py
weni/classifier/: apps.py  serializers.py  urls.py  views.py
weni/classifier_grpc/: __init__.py  apps.py  serializers.py  services.py  tests.py
weni/contacts_ext/: README.md  apps.py  serializers.py  urls.py  views.py
weni/flow_grpc/: apps.py  services.py  tests.py  urls.py
weni/grpc_central/: __init__.py  apps.py  serializers.py  services.py  urls.py
weni/grpc_root/: __init__.py  apps.py
weni/internal/: apps.py  authenticators.py  models.py  tasks.py  urls.py  views.py
weni/org_grpc/: __init__.py  apps.py  serializers.py  services.py  tests.py  urls.py
weni/orgs_api/: README.md  __init__.py  apps.py  serializers.py  tests.py  urls.py  views.py
weni/s3/: __init__.py  apps.py  urls.py  views.py
weni/serializers/: __init__.py  fields.py
weni/statistic_grpc/: services.py  tests.py  urls.py
weni/success_orgs/: apps.py  business.py  serializers.py  urls.py  views.py
weni/template_message/: README.md  __init__.py  apps.py  requests.py  serializers.py  tasks.py  tests.py  urls.py  views.py
weni/templates/: context_processors.py
weni/ticketer_queues/: README.md  __init__.py  apps.py  serializers.py  tests.py  urls.py  views.py
weni/user_grpc/: apps.py  serializers.py  services.py  tests.py  urls.py
weni/utils/: app_config.py
(+150 files in other folders)
