[tool.poetry]
name = "weni-rp-apps"
version = "2.4.0"
description = "Weni apps for Rapidpro Platform"
authors = ["jcbalmeida"]
license = "AGPL-3.0"
packages = [
    { include = "weni" }
]

[tool.poetry.dependencies]
python = "^3.7"
mozilla-django-oidc = "^2.0.0"
djangogrpcframework = "^0.2.1"
django-environ = "^0.7.0"
elastic-apm = "^6.4.0"
flower = "^0.9"
django-templates-macros = "^0.2"
django-csp = "^3.7"
pre-commit = "^2.20.0"
weni-protobuffers = "1.2.18"
drf-nested-routers = "^0.93.4"
Django = "^3.2.6"
django-compressor = "^2.4"
django-countries = "^7.0"
django-hamlpy = "^1.4.4"
django-mptt = "^0.12.0"
django-redis = "^4.12.1"
django-storages = "^1.11.1"
django-timezone-field = "^4.1.1"
djangorestframework = "^3.12.2"
dj-database-url = "^0.5.0"
smartmin = "^3.1.0"
celery = "^5.1.0"
redis = "^3.5.3"
elasticsearch = "^7.11.0"
elasticsearch-dsl = "^7.3.0"
analytics-python = "^1.2.9"
boto3 = "^1.17.21"
librato_bg = "^1.0.6"
cryptography = "3.4.7"
vonage = "2.5.2"
pyfcm = "^1.5.1"
pyotp = "2.4.1"
python-telegram-bot = "^11.1.0"
sentry-sdk = "^1.0.0"
stripe = "^2.56.0"
twilio = "6.24.0"
twython = "3.5.0"
geojson = "^2.5.0"
Markdown = "^3.3.4"
polib = "^1.1.0"
pyexcel = "^0.6.6"
pyexcel-xls = "^0.6.2"
pyexcel-xlsx = "^0.6.0"
python-magic = "^0.4.22"
xlsxlite = "^0.2.0"
colorama = "^0.4.4"
gunicorn = "^20.0.4"
iptools = "^0.7.0"
iso-639 = "^0.4.5"
iso8601 = "^0.1.14"
phonenumbers = "*"
pycountry = "^20.7.3"
python-dateutil = "2.2"
psycopg2-binary = "^2.9.1"
python-intercom = "^3.1.0"
packaging = "^20.9"
requests-toolbelt = "^0.9.1"
chardet = "^4.0.0"
openpyxl = "^3.0.9"
crisp-api = "1.1.10"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.39.0"
black = "^21.11b1"
coverage = "^5.5"
flake8 = "3.7.7"
isort = "^4.3.16"
responses = "^0.12.1"
beautifulsoup4 = "^4.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
