[tool.poetry]
name = "weni-rp-apps"
version = "2.7.2"
description = "Weni apps for Rapidpro Platform"
authors = ["jcbalmeida"]
license = "AGPL-3.0"
packages = [
    { include = "weni" }
]

[tool.poetry.dependencies]
python = "^3.7"
mozilla-django-oidc = "^2.0.0"
djangogrpcframework = "^0.2.1"
django-environ = "^0.7.0"
elastic-apm = "^6.4.0"
flower = "^0.9"
django-templates-macros = "^0.2"
django-csp = "^3.7"
pre-commit = "^2.20.0"
weni-protobuffers = "1.2.18"
drf-nested-routers = "^0.93.4"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
